# docker_up

./: .docker-compose.yml.swp  .gitignore  MANIFEST.in  README.md  \  auto_scale.py  connectiontest.py  docker-compose.yml  pyproject.toml
data/: docker_stats.csv
docker/blog/: .app.py.swp  Dockerfile  app.py  requirements.txt
docker/dashboard/: Dockerfile  app.py  default.conf
docker/db/: .my.cnf  Dockerfile  default.conf  env.sh
docker/db/config/: .my.cnf  mariadb.conf
docker/db/init/: init.sql
docker/exporter/: .my.cnf  Dockerfile
docker/extract/: Dockerfile  app.py  requirements.txt
docker/fast/: Dockerfile  app.py  requirements.txt
docker/nginx/: Dockerfile  default.conf
docker/ngrinder/: Dockerfile  default.conf  prometeus_setting  prometheus.yml
ngrinder-controller/db/: h2.mv.db  h2.trace.db
ngrinder-controller/repos/admin/db/: uuid
ngrinder-controller/repos/admin/db/revprops/0/: 0  1
ngrinder-controller/repos/superuser/db/: uuid
ngrinder-controller/repos/superuser/db/revprops/0/: 0  1
ngrinder-controller/repos/system/db/: uuid
ngrinder-controller/repos/system/db/revprops/0/: 0  1
ngrinder-controller/repos/user/db/: uuid
ngrinder-controller/repos/user/db/revprops/0/: 0  1
src/docker_up/: .abtest-app.py.swp  Dockerfile  abtest-app.py  auto_scale.py  docker-compose.yml  init.py  init_db.py  main.py  setup.py
src/docker_up/docker/blog/: Dockerfile
src/docker_up/docker/db/: Dockerfile
