[project]
name = "docker_up"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "Life_is_one_Shot", email = "elnath1002@naver.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.build]
includes = [
    "../Dockerfile",
    "../docker-compose.yml",
    "../docker/*"
]

[tool.pdm]
distribution = true

[project.scripts]
oneshot = 'docker_up.setup:main'
