[project]
name = "docker_up"
version = "0.4.0"
description = "Default template for PDM package"
authors = [
    {name = "Life_is_one_Shot", email = "elnath1002@naver.com"},
]
dependencies = [
    "streamlit>=1.38.0",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "streamlit-option-menu>=0.3.13",
    "PyMySQL>=1.0.3",
    "matplotlib>=3.9.2",
    "prometheus-api-client>=0.5.5",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[project.scripts]
oneshot = 'docker_up.setup:main'
